--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "kreait/firebase-php": "^7.12",
+        "kreait/laravel-firebase": "^5.8",
         "laravel/framework": "^11.0",
         "laravel/jetstream": "^5.0",
-        "laravel/passport": "^12.0",
+        "laravel/passport": "^12.2",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.0"
