--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,17 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/OneSignal/onesignal-php-api.git"
+        }
+    ],
     "require": {
         "php": "^8.2",
         "kreait/firebase-php": "^7.12",
@@ -13,7 +22,8 @@
         "laravel/passport": "^12.2",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "livewire/livewire": "^3.0"
+        "livewire/livewire": "^3.0",
+        "onesignal/onesignal-php-api": "*@dev"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
